<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="google_api_key">AIzaSyAqPaZDgkeOGxbWY29NadgqCBgXB_jB0GE</string>
    <string name="app_name">Metfone</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifications</string>
    <string name="my_profile">My profile</string>
    <string name="account_detail">Account Details</string>
    <string name="about_us">About us</string>
    <string name="tariff_info">Tariff info</string>
    <string name="vietel_showroom">Showroom</string>
    <string name="setting">Settings</string>
    <string name="help">Help</string>
    <string name="provine">Provine</string>
    <string name="showroom">Showrooms</string>
    <string name="view_detail">View Details</string>
    <string name="login">Login</string>
    <string name="get_otp">Get OTP</string>
    <string name="remove">Remove</string>
    <string name="register">Register</string>
    <string name="change_language">Change Language</string>
    <string name="mobile_number">Mobile number</string>
    <string name="tariff_plan">My Tariff plan</string>
    <string name="tariff_details">Tariff details</string>
    <string name="change_tariff">Change tariff</string>
    <string name="english">English</string>
    <string name="Kmer">ភាសាខ្មែរ</string>
    <string name="tel">Tel</string>
    <string name="address">Address</string>
    <string name="basic_account">Basic balance</string>
    <string name="balance_expire">Balance expire</string>
    <string name="balance_value">Balance value</string>
    <string name="up_pay">Up pay</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="number">Number</string>
    <string name="user_using">User using</string>
    <string name="account_type">Package</string>
    <string name="start_datetime">Active date</string>
    <string name="birthdate">Date of birth</string>
    <string name="pin">Pin</string>
    <string name="password">Password</string>
    <string name="re_password">Retype Password</string>
    <string name="data_register">Register</string>
    <string name="deactive">Deactive</string>
    <string name="confirm_register_data">Do you want to register this data package?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_register">Not register</string>
    <string name="active">Active</string>
    <string name="buy_more">Buy more</string>
    <string name="other_account">Other Account</string>
    <string name="top_up">Top up</string>
    <string name="account_info">Account info</string>
    <string name="balance_infomation">Balance information</string>
    <string name="other_balance">Other balance</string>
    <string name="expity_date">Expiry date</string>
    <string name="other_account_info">Other account info</string>
    <string name="confirm_up_pay">You want to recharge to?</string>
    <string name="you">Your number</string>
    <string name="anyone">Other number</string>
    <string name="enter_number">Enter the number</string>
    <string name="enter_receiver_number">Enter receiver number</string>
    <string name="choose_amount">Choose amount</string>
    <string name="enter_ishare_amount">Enter amount (cents)</string>
    <string name="enter_pin">Scratch card number</string>
    <string name="enter_amount">Enter the amount</string>
    <string name="enter_password">Enter your password</string>
    <string name="data_3g_account">Mobile Internet</string>
    <string name="data_balance">Data balance</string>
    <string name="other_3g_account">Other account</string>
    <string name="buy_data">Buy data</string>
    <string name="map">Map</string>
    <string name="confirm_logout">Do you want to logout?</string>
    <string name="offer">Offer</string>
    <string name="special_offer">Special offer</string>
    <string name="offer_info">Offer info</string>
    <string name="service">Service</string>
    <string name="value_added_services">Value added services</string>
    <string name="transaction_search">Transaction search</string>
    <string name="info">Info</string>
    <string name="pack_4g">4G pack</string>
    <string name="buy">Buy</string>
    <string name="charge_debit">Charges of customers in month</string>
    <string name="debit_start">Debit at start of cycle</string>
    <string name="payment">Payment</string>
    <string name="credit">Credit</string>
    <string name="debit_history">Debit history</string>
    <string name="pay_199">Pay 199</string>
    <string name="tariff_detail">Tariff Details</string>
    <string name="promotion">Special Offer</string>
    <string name="vas">VAS</string>
    <string name="tranfer">Tranfer</string>
    <string name="postpaid">Postpaid</string>
    <string name="prepaid">Prepaid</string>
    <string name="err_connect">Connection error</string>
    <string name="data_unavalable">You have not been register Mobile Internet Service</string>
    <string name="message_empty_number">Empty number!</string>
    <string name="message_empty_pin">Empty pin!</string>
    <string name="message_checking">checking...</string>
    <string name="message_success">Success!</string>
    <string name="message_fail">Fail!</string>
    <string name="message_loading">loading...</string>
    <string name="up_pay_m6">Unhandled error, please contact administrator</string>
    <string name="up_pay_m3">Invalid subsriber format</string>
    <string name="up_pay_m5">Pin not found</string>
    <string name="up_pay_2">Card pin is not valid</string>
    <string name="up_pay_5">Not found subscriber info</string>
    <string name="up_pay_7">Over permitted charge times</string>
    <string name="up_pay_6">Payment error</string>
    <string name="acc2000">Basic account</string>
    <string name="acc4400">Free on-net call</string>
    <string name="acc4046">Free on-net call</string>
    <string name="acc4000">Free on-net call</string>
    <string name="acc4001">Free on-net call</string>
    <string name="acc2001">Promotion balance</string>
    <string name="acc2004">Active balance</string>
    <string name="acc4200">SMS free</string>
    <string name="acc4500">Bonus data</string>
    <string name="acc4561">Promotion data</string>
    <string name="acc4560">Basic data</string>
    <string name="acc2003">Basic3 balance</string>
    <string name="acc2500">Exchange balance</string>
    <string name="acc2113">Data balance</string>
    <string name="acc2100">Call balance</string>
    <string name="acc2400">SMS balance</string>
    <string name="acc2501">Bonus balance</string>
    <string name="acc2505">Promotion balance</string>
    <string name="acc2504">Bonus balance</string>
    <string name="acc2002">Basic2 balance</string>
    <string name="err0">success</string>
    <string name="err1000">User name is invalid</string>
    <string name="err2000">Webservice code is invalid</string>
    <string name="err4000">"The request's message's format is not accurate"</string>
    <string name="err1001">User name does not exits</string>
    <string name="err6000">Because our system is overloading, please wait another time to sent requests</string>
    <string name="err7000">The connection to DB has some problems. The gateway can not handle the request at this time</string>
    <string name="err6001">"You don't have the right to access the web service"</string>
    <string name="err6002">Your right about calling the web service is expired, please contact the administrator</string>
    <string name="err6003">Login failed. Please check user name, password and your IP Address and contact the administrator</string>
    <string name="err6004">Login failed.UserName is invalid.</string>
    <string name="err7001">Database error</string>
    <string name="err2005">Webservice error</string>
    <string name="err6005">Error when load response to DOM</string>
    <string name="err8000">The ip is incorrect</string>
    <string name="err9001">Exception</string>
    <string name="err9002">Error when prepare soap input</string>
    <string name="err3000">Client does not found in databse or inactive</string>
    <string name="err2001">Webservice does not found in databse or inactive</string>
    <string name="err4001">Requested web service does not exits</string>
    <string name="err5000">Too many requests. Please wait until your other request finish</string>
    <string name="err1002">User name is inactive, please contact the administrator</string>
    <string name="limited_plan">Limited plans</string>
    <string name="unlimited_plan">Unlimited plans</string>
    <string name="add_on_data">Add-on data</string>
    <string name="social_plans">Social plans</string>
    <string name="mf_data_plan">Metfone data plans</string>
    <string name="change_pass">Change password</string>
</resources>