<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:background="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mf_data_plan"
            android:textColor="#fff"
            android:textSize="@dimen/text_header"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/limited_plan"
                android:textColor="#000"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/lv_sub_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:divider="#eee"
                android:dividerHeight="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/unlimited_plan"
                android:textColor="#000"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/lv_sub_unlimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:divider="#eee"
                android:dividerHeight="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/add_on_data"
                android:textColor="#000"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/lv_sub_aop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:divider="#eee"
                android:dividerHeight="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:text="@string/social_plans"
                android:textColor="#000"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/lv_sub_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:divider="#eee"
                android:dividerHeight="1dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>